@@ -5,5 +5,6 @@ requires_from         lib/ADAMK/Repository.pm
 test_requires         Test::More       0.86
 test_requires         Test::Script     1.03
 test_requires         Test::NoWarnings 0.84
+install_share
 install_script        adamk
 requires_external_bin svn
