@@ -1,0 +1,93 @@
+=head1 NAME
+
+ADAMK::Cache::Svn - ADAMK::Cache class for the svn table
+
+=head1 SYNOPSIS
+
+  TO BE COMPLETED
+
+=head1 DESCRIPTION
+
+TO BE COMPLETED
+
+=head1 METHODS
+
+=head2 select
+
+  # Get all objects in list context
+  my @list = ADAMK::Cache::Svn->select;
+  
+  # Get a subset of objects in scalar context
+  my $array_ref = ADAMK::Cache::Svn->select(
+      'where  > ? order by ',
+      1000,
+  );
+
+The C<select> method executes a typical SQL C<SELECT> query on the
+svn table.
+
+It takes an optional argument of a SQL phrase to be added after the
+C<FROM svn> section of the query, followed by variables
+to be bound to the placeholders in the SQL phrase. Any SQL that is
+compatible with SQLite can be used in the parameter.
+
+Returns a list of B<ADAMK::Cache::Svn> objects when called in list context, or a
+reference to an ARRAY of B<ADAMK::Cache::Svn> objects when called in scalar context.
+
+Throws an exception on error, typically directly from the L<DBI> layer.
+
+=head2 count
+
+  # How many objects are in the table
+  my $rows = ADAMK::Cache::Svn->count;
+  
+  # How many objects 
+  my $small = ADAMK::Cache::Svn->count(
+      'where  > ?',
+      1000,
+  );
+
+The C<count> method executes a C<SELECT COUNT(*)> query on the
+svn table.
+
+It takes an optional argument of a SQL phrase to be added after the
+C<FROM svn> section of the query, followed by variables
+to be bound to the placeholders in the SQL phrase. Any SQL that is
+compatible with SQLite can be used in the parameter.
+
+Returns the number of objects that match the condition.
+
+Throws an exception on error, typically directly from the L<DBI> layer.
+
+=head1 ACCESSORS
+
+
+REMAINING ACCESSORS TO BE COMPLETED
+
+=head1 SQL
+
+The svn table was originally created with the
+following SQL command.
+
+  CREATE TABLE svn ( directory TEXT, command TEXT, stdout TEXT )
+
+=head1 SUPPORT
+
+ADAMK::Cache::Svn is part of the L<ADAMK::Cache> API.
+
+See the documentation for L<ADAMK::Cache> for more information.
+
+=head1 AUTHOR
+
+Adam Kennedy
+
+=head1 COPYRIGHT
+
+Copyright 2009 Adam Kennedy.
+
+This program is free software; you can redistribute
+it and/or modify it under the same terms as Perl itself.
+
+The full text of the license can be found in the
+LICENSE file included with this module.
+
