@@ -18,6 +18,8 @@ use File::Temp               0.21 ();
 use File::Flat               1.04 ();
 use File::pushd              1.00 ();
 use File::Remove             1.42 ();
+use File::HomeDir            0.86 ();
+use File::ShareDir           1.00 ();
 use File::Find::Rule         0.30 ();
 use File::Find::Rule::VCS    1.05 ();
 use File::Find::Rule::Perl   1.06 ();
@@ -31,6 +33,7 @@ use Archive::Extract         0.30 ();
 use Object::Tiny::XS         1.01 ();
 use ExtUtils::MakeMaker      6.50 ();
 use PPI                     1.203 ();
+use ORLite::Migrate          0.03 ();
 use Module::Changes::ADAMK   0.10 ();
 use ADAMK::Util                   ();
 use ADAMK::Role::Trace            ();
@@ -38,6 +41,7 @@ use ADAMK::Role::File             ();
 use ADAMK::Role::SVN              ();
 use ADAMK::Role::Changes          ();
 use ADAMK::Role::Make             ();
+use ADAMK::Cache                  ();
 use ADAMK::Release                ();
 use ADAMK::Release::Extract       ();
 use ADAMK::Distribution           ();
